--- a/house.ipynb
+++ b/house.ipynb
@@ -174,6 +174,7 @@
     "ax.set_xlabel('Median House Value')\n",
     "ax.set_ylabel('Frequency')\n",
     "ax.set_title('Distribution of Median House Value')\n",
+    "plt.grid(True)"
     "\n",
     "\n"
    ]
